# factorization-machines

./: .gitignore  Cargo.toml  README.md  pyproject.toml
rustpy_fm/: __init__.py
src/: fm.rs  lib.rs
tests/: test_fm.py
